--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Grapher"]
-	path = Grapher
-	url = https://github.com/Programmer-RZ/Grapher
+[submodule "tools/Grapher"]
+	path = tools/Grapher
+	url = https://github.com/Programmer-RZ/Grapher.git
